<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <AutoCompleteTextView
            android:id="@+id/bruttolohn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.21"
            android:layout_marginTop="2dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:elegantTextHeight="true"
            android:hint="Bruttolohn" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/textview_height"
            android:layout_weight="0.50"
            android:ems="10"
            android:text="Steuerklasse"
            android:layout_marginLeft="@dimen/textview_layout_marginLeft"
            android:layout_marginTop="@dimen/textview_layout_marginTop"
            android:textSize="@dimen/textview_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:layout_height="40dp"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:ems="10"
            android:entries="@array/stkl_array"
            android:prompt="@string/stkl_prompt"
            android:id="@+id/stkl"
            android:contentDescription="Steuerklasse"
            android:layout_marginTop="2dp"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/textview_height"
            android:layout_weight="0.50"
            android:ems="15"
            android:text="Bundesland"
            android:layout_marginLeft="@dimen/textview_layout_marginLeft"
            android:layout_marginTop="@dimen/textview_layout_marginTop"
            android:textSize="@dimen/textview_font_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Spinner
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.75"
            android:ems="10"
            android:prompt="@string/bundesland_prompt"
            android:id="@+id/bundesland"
            android:contentDescription="Bundesland"
            android:theme="@android:style/Widget.DropDownItem.Spinner"
            android:layout_marginTop="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/textview_height"
            android:layout_weight="0.50"
            android:ems="15"
            android:text="Krankenkasse"
            android:layout_marginLeft="@dimen/textview_layout_marginLeft"
            android:layout_marginTop="@dimen/textview_layout_marginTop"
            android:textSize="@dimen/textview_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Spinner
            android:textSize="20sp"
            android:gravity="left"
            android:textColor="@color/spinner_fontColor"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:ems="5"
            android:prompt="@string/krankenkassen_prompt"
            android:id="@+id/krankenkasse"
            android:contentDescription=""
            android:theme="@android:style/Widget.DropDownItem.Spinner"
            android:layout_marginTop="2dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/textview_height"
            android:layout_weight="0.50"
            android:ems="15"
            android:text="Kirchensteuer"
            android:layout_marginLeft="@dimen/textview_layout_marginLeft"
            android:layout_marginTop="@dimen/textview_layout_marginTop"
            android:textSize="@dimen/textview_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Spinner
            android:textSize="20sp"
            android:gravity="left"
            android:textColor="@color/spinner_fontColor"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:ems="5"
            android:prompt="@string/kist_prompt"
            android:id="@+id/kist"
            android:contentDescription=""
            android:theme="@android:style/Widget.DropDownItem.Spinner"
            android:layout_marginTop="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/textview_height"
            android:layout_weight="0.50"
            android:ems="15"
            android:text="Kinder"
            android:layout_marginLeft="@dimen/textview_layout_marginLeft"
            android:layout_marginTop="@dimen/textview_layout_marginTop"
            android:textSize="@dimen/textview_font_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Spinner
            android:textSize="20sp"
            android:gravity="left"
            android:textColor="@color/spinner_fontColor"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:ems="5"
            android:prompt="@string/kinder_prompt"
            android:id="@+id/kinder"
            android:contentDescription=""
            android:theme="@android:style/Widget.DropDownItem.Spinner"
            android:layout_marginTop="2dp" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/berechnen"
        android:layout_weight="150"
        android:layout_marginTop="30dp"
        android:text="Berechnung starten"
        android:textSize="20dp" />
</LinearLayout>